// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snapshots With disabled prop should match snapshot with default Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: 2px solid #231B22;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c0:active {
  background-color: rgba(35,27,34,0.75);
  border-color: transparent;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #F5F5FA;
  border-color: transparent;
  color: #D7D7E0;
  cursor: not-allowed;
}

<div>
  <button
    class="c0"
    disabled=""
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With disabled prop should match snapshot with link Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: 2px solid #231B22;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: unset;
  padding: 0;
  margin-top: 16px;
  margin-bottom: 8px;
  background-color: unset;
  border: none;
  border-radius: 0;
  color: #231B22;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c0:active {
  background-color: rgba(35,27,34,0.75);
  border-color: transparent;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #F5F5FA;
  border-color: transparent;
  color: #D7D7E0;
  cursor: not-allowed;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: unset;
  color: rgba(35,27,34,0.75);
}

.c0:not([disabled]):active {
  background-color: unset;
  color: rgba(35,27,34,0.75);
}

.c0:disabled {
  background-color: unset;
  color: #D7D7E0;
}

<div>
  <button
    class="c0"
    disabled=""
  />
</div>
`;

exports[`<Button /> Snapshots With disabled prop should match snapshot with outline Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: 2px solid #231B22;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c0:active {
  background-color: rgba(35,27,34,0.75);
  border-color: transparent;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #F5F5FA;
  border-color: transparent;
  color: #D7D7E0;
  cursor: not-allowed;
}

.c1 {
  background-color: transparent;
  border-color: #231B22;
  color: #231B22;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(35,27,34,0.25);
  box-shadow: none;
}

.c1:not([disabled]):active {
  background-color: transparent;
  border-color: rgba(35,27,34,0.75);
  color: rgba(35,27,34,0.75);
}

.c1:disabled {
  background-color: transparent;
  border-color: #D7D7E0;
  color: #D7D7E0;
}

<div>
  <button
    class="c0 c1"
    disabled=""
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With disabled prop should match snapshot with text Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: 2px solid #231B22;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c0:active {
  background-color: rgba(35,27,34,0.75);
  border-color: transparent;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #F5F5FA;
  border-color: transparent;
  color: #D7D7E0;
  cursor: not-allowed;
}

.c1 {
  background-color: transparent;
  border-color: transparent;
  color: #231B22;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(35,27,34,0.25);
  box-shadow: none;
}

.c1:not([disabled]):active {
  background-color: transparent;
  border-color: transparent;
  color: rgba(35,27,34,0.75);
}

.c1:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #D7D7E0;
}

<div>
  <button
    class="c0 c1"
    disabled=""
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With full prop should match snapshot with default Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: 100%;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: 2px solid #231B22;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c0:active {
  background-color: rgba(35,27,34,0.75);
  border-color: transparent;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #F5F5FA;
  border-color: transparent;
  color: #D7D7E0;
  cursor: not-allowed;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With full prop should match snapshot with outline Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: 100%;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: 2px solid #231B22;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c0:active {
  background-color: rgba(35,27,34,0.75);
  border-color: transparent;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #F5F5FA;
  border-color: transparent;
  color: #D7D7E0;
  cursor: not-allowed;
}

.c1 {
  background-color: transparent;
  border-color: #231B22;
  color: #231B22;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(35,27,34,0.25);
  box-shadow: none;
}

.c1:not([disabled]):active {
  background-color: transparent;
  border-color: rgba(35,27,34,0.75);
  color: rgba(35,27,34,0.75);
}

.c1:disabled {
  background-color: transparent;
  border-color: #D7D7E0;
  color: #D7D7E0;
}

<div>
  <button
    class="c0 c1"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With full prop should match snapshot with text Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: 100%;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: 2px solid #231B22;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c0:active {
  background-color: rgba(35,27,34,0.75);
  border-color: transparent;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #F5F5FA;
  border-color: transparent;
  color: #D7D7E0;
  cursor: not-allowed;
}

.c1 {
  background-color: transparent;
  border-color: transparent;
  color: #231B22;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(35,27,34,0.25);
  box-shadow: none;
}

.c1:not([disabled]):active {
  background-color: transparent;
  border-color: transparent;
  color: rgba(35,27,34,0.75);
}

.c1:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #D7D7E0;
}

<div>
  <button
    class="c0 c1"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With inverted prop should match snapshot with default Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: 2px solid #231B22;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  color: #231B22;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c0:active {
  background-color: rgba(35,27,34,0.75);
  border-color: transparent;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #F5F5FA;
  border-color: transparent;
  color: #D7D7E0;
  cursor: not-allowed;
}

.c0:active {
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  color: rgba(35,27,34,0.75);
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(255,255,255,0.45);
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With inverted prop should match snapshot with link Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: 2px solid #231B22;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  color: #231B22;
  height: unset;
  padding: 0;
  margin-top: 16px;
  margin-bottom: 8px;
  background-color: unset;
  border: none;
  border-radius: 0;
  color: #231B22;
  color: #FFFFFF;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c0:active {
  background-color: rgba(35,27,34,0.75);
  border-color: transparent;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #F5F5FA;
  border-color: transparent;
  color: #D7D7E0;
  cursor: not-allowed;
}

.c0:active {
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  color: rgba(35,27,34,0.75);
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(255,255,255,0.45);
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: unset;
  color: rgba(35,27,34,0.75);
}

.c0:not([disabled]):active {
  background-color: unset;
  color: rgba(35,27,34,0.75);
}

.c0:disabled {
  background-color: unset;
  color: #D7D7E0;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: unset;
  color: #6B6B78;
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`<Button /> Snapshots With inverted prop should match snapshot with outline Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: 2px solid #231B22;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  color: #231B22;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c0:active {
  background-color: rgba(35,27,34,0.75);
  border-color: transparent;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #F5F5FA;
  border-color: transparent;
  color: #D7D7E0;
  cursor: not-allowed;
}

.c0:active {
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  color: rgba(35,27,34,0.75);
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(255,255,255,0.45);
}

.c1 {
  background-color: transparent;
  border-color: #231B22;
  color: #231B22;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(35,27,34,0.25);
  box-shadow: none;
}

.c1:not([disabled]):active {
  background-color: transparent;
  border-color: rgba(35,27,34,0.75);
  color: rgba(35,27,34,0.75);
}

.c1:disabled {
  background-color: transparent;
  border-color: #D7D7E0;
  color: #D7D7E0;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(255,255,255,0.25);
}

.c1:not([disabled]):active {
  border-color: rgba(255,255,255,0.75);
  color: rgba(255,255,255,0.75);
}

<div>
  <button
    class="c0 c1"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With inverted prop should match snapshot with text Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: 2px solid #231B22;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  color: #231B22;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c0:active {
  background-color: rgba(35,27,34,0.75);
  border-color: transparent;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #F5F5FA;
  border-color: transparent;
  color: #D7D7E0;
  cursor: not-allowed;
}

.c0:active {
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  color: rgba(35,27,34,0.75);
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(255,255,255,0.45);
}

.c1 {
  background-color: transparent;
  border-color: transparent;
  color: #231B22;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(35,27,34,0.25);
  box-shadow: none;
}

.c1:not([disabled]):active {
  background-color: transparent;
  border-color: transparent;
  color: rgba(35,27,34,0.75);
}

.c1:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #D7D7E0;
}

<div>
  <button
    class="c0 c1"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With small prop should match snapshot with default Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 32px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: 1px solid #231B22;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c0:active {
  background-color: rgba(35,27,34,0.75);
  border-color: transparent;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #F5F5FA;
  border-color: transparent;
  color: #D7D7E0;
  cursor: not-allowed;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With small prop should match snapshot with outline Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 32px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: 1px solid #231B22;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c0:active {
  background-color: rgba(35,27,34,0.75);
  border-color: transparent;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #F5F5FA;
  border-color: transparent;
  color: #D7D7E0;
  cursor: not-allowed;
}

.c1 {
  background-color: transparent;
  border-color: #231B22;
  color: #231B22;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(35,27,34,0.25);
  box-shadow: none;
}

.c1:not([disabled]):active {
  background-color: transparent;
  border-color: rgba(35,27,34,0.75);
  color: rgba(35,27,34,0.75);
}

.c1:disabled {
  background-color: transparent;
  border-color: #D7D7E0;
  color: #D7D7E0;
}

<div>
  <button
    class="c0 c1"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With small prop should match snapshot with text Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 32px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: 1px solid #231B22;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c0:active {
  background-color: rgba(35,27,34,0.75);
  border-color: transparent;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #F5F5FA;
  border-color: transparent;
  color: #D7D7E0;
  cursor: not-allowed;
}

.c1 {
  background-color: transparent;
  border-color: transparent;
  color: #231B22;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(35,27,34,0.25);
  box-shadow: none;
}

.c1:not([disabled]):active {
  background-color: transparent;
  border-color: transparent;
  color: rgba(35,27,34,0.75);
}

.c1:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #D7D7E0;
}

<div>
  <button
    class="c0 c1"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots With variant prop should match snapshot with link Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: 2px solid #231B22;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: unset;
  padding: 0;
  margin-top: 16px;
  margin-bottom: 8px;
  background-color: unset;
  border: none;
  border-radius: 0;
  color: #231B22;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c0:active {
  background-color: rgba(35,27,34,0.75);
  border-color: transparent;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #F5F5FA;
  border-color: transparent;
  color: #D7D7E0;
  cursor: not-allowed;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: unset;
  color: rgba(35,27,34,0.75);
}

.c0:not([disabled]):active {
  background-color: unset;
  color: rgba(35,27,34,0.75);
}

.c0:disabled {
  background-color: unset;
  color: #D7D7E0;
}

.c1 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: 2px solid #231B22;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: unset;
  padding: 0;
  margin-top: 16px;
  margin-bottom: 8px;
  background-color: unset;
  border: none;
  border-radius: 0;
  color: #D8385E;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c1:active {
  background-color: rgba(35,27,34,0.75);
  border-color: transparent;
  color: #FFFFFF;
}

.c1:disabled {
  background-color: #F5F5FA;
  border-color: transparent;
  color: #D7D7E0;
  cursor: not-allowed;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  box-shadow: unset;
  color: rgba(216,56,94,0.75);
}

.c1:not([disabled]):active {
  background-color: unset;
  color: rgba(216,56,94,0.75);
}

.c1:disabled {
  background-color: unset;
  color: #D7D7E0;
}

<div>
  <button
    class="c0"
  />
  <button
    class="c1"
  />
</div>
`;

exports[`<Button /> Snapshots Without props should match snapshot with default Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: 2px solid #231B22;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c0:active {
  background-color: rgba(35,27,34,0.75);
  border-color: transparent;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #F5F5FA;
  border-color: transparent;
  color: #D7D7E0;
  cursor: not-allowed;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots Without props should match snapshot with link Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: 2px solid #231B22;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: unset;
  padding: 0;
  margin-top: 16px;
  margin-bottom: 8px;
  background-color: unset;
  border: none;
  border-radius: 0;
  color: #231B22;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c0:active {
  background-color: rgba(35,27,34,0.75);
  border-color: transparent;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #F5F5FA;
  border-color: transparent;
  color: #D7D7E0;
  cursor: not-allowed;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: unset;
  color: rgba(35,27,34,0.75);
}

.c0:not([disabled]):active {
  background-color: unset;
  color: rgba(35,27,34,0.75);
}

.c0:disabled {
  background-color: unset;
  color: #D7D7E0;
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`<Button /> Snapshots Without props should match snapshot with outline Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: 2px solid #231B22;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c0:active {
  background-color: rgba(35,27,34,0.75);
  border-color: transparent;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #F5F5FA;
  border-color: transparent;
  color: #D7D7E0;
  cursor: not-allowed;
}

.c1 {
  background-color: transparent;
  border-color: #231B22;
  color: #231B22;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(35,27,34,0.25);
  box-shadow: none;
}

.c1:not([disabled]):active {
  background-color: transparent;
  border-color: rgba(35,27,34,0.75);
  color: rgba(35,27,34,0.75);
}

.c1:disabled {
  background-color: transparent;
  border-color: #D7D7E0;
  color: #D7D7E0;
}

<div>
  <button
    class="c0 c1"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snapshots Without props should match snapshot with text Button 1`] = `
.c0 {
  box-sizing: border-box;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  width: auto;
  height: 48px;
  padding-left: 24px;
  padding-right: 24px;
  background-color: #231B22;
  border: 2px solid #231B22;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 700;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c0:active {
  background-color: rgba(35,27,34,0.75);
  border-color: transparent;
  color: #FFFFFF;
}

.c0:disabled {
  background-color: #F5F5FA;
  border-color: transparent;
  color: #D7D7E0;
  cursor: not-allowed;
}

.c1 {
  background-color: transparent;
  border-color: transparent;
  color: #231B22;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background-color: rgba(35,27,34,0.25);
  box-shadow: none;
}

.c1:not([disabled]):active {
  background-color: transparent;
  border-color: transparent;
  color: rgba(35,27,34,0.75);
}

.c1:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #D7D7E0;
}

<div>
  <button
    class="c0 c1"
  >
    Button
  </button>
</div>
`;
